tests/checker/diagnostics/0281_fun_monomorphic_int_bool_use_05.ml.infer.expected
File "0281_fun_monomorphic_int_bool_use_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0281_fun_monomorphic_int_bool_use_05 is not a valid module name.

File "0281_fun_monomorphic_int_bool_use_05.ml", line 1, characters 28-32:
1 | let use_epsilon f = (f 4, f true)
                                ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
